Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-02 (SVN):
    * hexenworld: Moved shared/model.h under client and server separately
      so that the two can use customized versions of the header.  Edited
      the server version to remove structures and macros which have never
      been used.

2011-12-02 (SVN):
    * quakedef.h: updated beta date stamp to 2011-12-02.

2011-12-02 (SVN):
    * hexen2 dos port: Made the serial network driver a compile time option.
      Adjusted the use of the NET_USE_SERIAL macro.

2011-12-02 (SVN):
    * Small tidy-up in hexen2 and hexenworld Makefiles.

2011-12-02 (SVN):
    * engine/hexen2/menu.c: Changed some of the obvious if conditions to
      else if. Used the values returned by strlen() as cached in a variable
      when possible.

2011-12-02 (SVN):
    * engine/hexen2/dos/net_comx.c: Made the functions TTY_GetComPortConfig,
      TTY_SetComPortConfig, TTY_GetModemConfig and TTY_SetModemConfig static.

2011-12-01 (SVN):
    * vid_sdl.c (VID_PrepareModes): No need using a different loop counter
      for copying the resolutions list. No need explicitly assigning NULL
      to the last member of the copy (Z_Malloc already sends a zero-filled
      memory to us)

2011-12-01 (SVN):
    * engine/hexen2/dos/net_dos.c: Fixed a misplaced endif directive.
    * engine/hexenworld/shared/net_chan.c: Added NOT_DEMOPLAYBACK as a
      new macro to clean up several SERVERONLY ifdefs.
      (Netchan_Process): Applied the unsigned cast to the sum value, not
      just to chan->incoming_sequence.
    * engine/hexenworld/shared/net_wins.c: Renamed to net_udp.c.
    * engine/hexenworld/shared/net_chan.c (Netchan_Setup): pre-initialize
      chan->incoming_sequence to -1 so a packet with an incoming sequence
      of 0 will work. Patch found in old quakeforge cvs commits.
      (Netchan_Process): Adjusted sequence comparison accordingly. Also